# RevLab

./: .gitignore  LICENSE  README.md  pyproject.toml  revlab.bat  revlab.py  rl
revlab/: __init__.py
revlab/analysis/: __init__.py  callgraph.py  cfg.py  cfg_web.py  compiler.py  deobfuscation.py  entropy.py  exports.py  hashes.py  imports.py  metadata.py  opcodes.py  resources.py  sections.py  similarity.py  statistics.py  strings.py  yara_engine.py
revlab/cli/: analyze.py  cfg.py  compare.py  disassemble.py  doctor.py  entropy.py  exports.py  functions.py  history.py  imports.py  main.py  metadata.py  opcodes.py  report.py  resources_cmd.py  sections.py  serve.py  strings.py  theme.py  tui.py  yara_cmd.py
revlab/database/: __init__.py  sqlite.py
revlab/disassembler/: __init__.py  basic_blocks.py  capstone_engine.py  function_finder.py  instruction.py
revlab/parsers/: __init__.py  common.py  elf.py  loader.py  macho.py  pe.py
revlab/plugins/: __init__.py  base.py  manager.py
revlab/reports/: __init__.py  html.py  json_report.py  markdown.py
revlab/reports/templates/: report_template.html
revlab/server/: __init__.py  api.py
tests/: generate_samples.py  test_revlab.py
